Add professionals section to about.html
Added a new section for professionals and funders detailing the G.L.O.E.W program and its offerings.

--- a/about.html
+++ b/about.html
@@ -107,7 +107,34 @@
         </div>
       </div>
     </section>
+<section id="professionals" class="pro-section">
+  <h2>For Professionals & Funders</h2>
+  <p>
+    G.L.O.E.W is a trauma-informed sisterhood programme designed to support young women aged 18–25 who have experienced, or are at risk of, domestic abuse, sexual trauma, emotional neglect, or community-based trauma. Our work blends emotional safety, empowerment, structured healing practices, and community building.
+  </p>
 
+  <p>
+    We partner with statutory services, charities, local authorities, youth organisations and safeguarding professionals who are committed to early intervention, emotional wellbeing, and long-term empowerment for young women. 
+  </p>
+
+  <p>
+    Our programme is built using:
+  </p>
+  <ul>
+    <li>Trauma-informed practice</li>
+    <li>Safeguarding-first frameworks</li>
+    <li>Reflective therapeutic exercises and confidence-building workshops</li>
+    <li>Holistic learning across emotional, social, and wellbeing pillars</li>
+    <li>Evidence-based models of empowerment and healthy relationship education</li>
+  </ul>
+
+  <p>
+    If you are a commissioner, safeguarding lead, funder, or practitioner interested in referrals, collaboration, or partnership opportunities, please get in touch. We welcome conversations that help expand the safety, healing, and opportunities available to young women.
+  </p>
+
+  <a href="contact.html" class="btn-pro">Contact Us</a>
+</section>
+    
     <footer>
       © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
     </footer>
