--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,30 @@
   <meta charset="UTF-8" />
   <title>Contact – G.L.O.E.W</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
-<meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
-<meta name="author" content="G.L.O.E.W">
 
-<meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
-<meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
-<meta property="og:url" content="https://wearegloew.github.io">
-<meta property="og:type" content="website">
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- SEO -->
+  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
+  <meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
+  <meta name="author" content="G.L.O.E.W">
+
+  <!-- Social Share -->
+  <meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
+  <meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
+  <meta property="og:url" content="https://wearegloew.github.io">
+  <meta property="og:type" content="website">
 </head>
+
 <body>
-  <section class="animate">
-   ...content...
-</section>
   <div class="page">
+
+    <!-- HEADER -->
     <header>
       <div class="brand">
         <div class="brand-logo">
@@ -32,23 +38,26 @@
           <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
         </div>
       </div>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="programme.html">Programme</a>
         <a href="join.html">Join</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
       </nav>
     </header>
 
-    <section class="page-intro">
+    <!-- INTRO -->
+    <section class="page-intro animate">
       <h1>Contact & collaborations</h1>
       <p>
         For referrals, partnerships, venues or funding conversations, we’d love to hear from you.
       </p>
     </section>
 
-    <section class="section-narrow">
+    <!-- CONTACT DETAILS -->
+    <section class="section-narrow animate">
       <div class="section-pill">Get in touch</div>
       <h2 class="section-title">Contact details</h2>
 
@@ -58,6 +67,7 @@
           <strong>Instagram:</strong> @G.L.O.E.W<br>
           <strong>TikTok:</strong> @G.L.O.E.W
         </p>
+
         <p style="margin-top: 10px;">
           For safeguarding concerns or urgent support, please contact appropriate emergency or crisis services.
           G.L.O.E.W is not a crisis service, but we can help with signposting during sessions.
@@ -65,28 +75,31 @@
       </div>
     </section>
 
-    <section class="section-narrow">
+    <!-- PARTNERSHIPS -->
+    <section class="section-narrow animate">
       <div class="section-pill">Partnerships</div>
       <h2 class="section-title">Venues & facilitators</h2>
 
       <div class="card-soft">
-        <p>
-          We are always open to connecting with:
-        </p>
+        <p>We are always open to connecting with:</p>
+
         <ul class="bullet">
           <li>Community spaces and venues who can host G.L.O.E.W cohorts.</li>
           <li>Facilitators delivering workshops aligned with our pillars (growth, love, opportunity, education, wellness).</li>
           <li>Funders, commissioners and organisations interested in trauma-informed, youth-led work.</li>
         </ul>
+
         <p style="margin-top: 8px;">
           Please reach out via email with a brief outline of who you are and how you’d like to collaborate.
         </p>
       </div>
     </section>
 
+    <!-- FOOTER -->
     <footer>
       © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
     </footer>
+
   </div>
 
   <script src="main.js"></script>
