--- a/programme.html
+++ b/programme.html
@@ -4,24 +4,30 @@
   <meta charset="UTF-8" />
   <title>Programme – G.L.O.E.W</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
-<meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
-<meta name="author" content="G.L.O.E.W">
 
-<meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
-<meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
-<meta property="og:url" content="https://wearegloew.github.io">
-<meta property="og:type" content="website">
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- SEO -->
+  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
+  <meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
+  <meta name="author" content="G.L.O.E.W">
+
+  <!-- Social Share -->
+  <meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
+  <meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
+  <meta property="og:url" content="https://wearegloew.github.io">
+  <meta property="og:type" content="website">
 </head>
+
 <body>
-  <section class="animate">
-   ...content...
-</section>
   <div class="page">
+
+    <!-- HEADER -->
     <header>
       <div class="brand">
         <div class="brand-logo">
@@ -32,16 +38,18 @@
           <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
         </div>
       </div>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="programme.html">Programme</a>
+        <a href="programme.html" class="active">Programme</a>
         <a href="join.html">Join</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
 
-    <section class="page-intro">
+    <!-- INTRO -->
+    <section class="page-intro animate">
       <h1>The G.L.O.E.W 12-week journey</h1>
       <p>
         A carefully designed programme blending healing, confidence, relationships, safety,
@@ -49,7 +57,8 @@
       </p>
     </section>
 
-    <section class="section-narrow">
+    <!-- PHASES -->
+    <section class="section-narrow animate">
       <div class="section-pill">Overview</div>
       <h2 class="section-title">Three phases of the cohort</h2>
 
@@ -58,98 +67,109 @@
           <span class="pill-mini">Phase 1</span>
           <h3>Weeks 1–4: Safety, stories & self-awareness.</h3>
           <p>
-            Welcome day, icebreakers, personality tests, story sharing, temperature checks
-            and reflective writing on life plans, trauma responses and identity.
+            Welcome day, icebreakers, personality tools, story sharing and reflective writing
+            on life plans, trauma responses and identity.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Phase 2</span>
           <h3>Weeks 5–8: Confidence, body & voice.</h3>
           <p>
-            Spoken word training, “Lay it Bare” therapeutic circles, movement workshops
-            (like pole art for confidence), self-defence and safety awareness.
+            Spoken word training, “Lay it Bare” circles, movement workshops
+            (including pole art for confidence), self-defence and safety awareness.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Phase 3</span>
           <h3>Weeks 9–12: Future, freedom & soft life.</h3>
           <p>
-            Money mindset, financial literacy, education and training opportunities,
-            celebration sessions, reflection, and an end-of-cohort treat.
+            Money mindset, financial literacy, opportunity pathways, reflection,
+            and a soft-life celebration to honour growth and next steps.
           </p>
         </div>
       </div>
     </section>
 
-    <section class="section-narrow">
+    <!-- WEEK BY WEEK -->
+    <section class="section-narrow animate">
       <div class="section-pill">Week by week</div>
       <h2 class="section-title">Sample cohort outline</h2>
 
       <div class="section-grid">
+
         <div class="card-soft">
           <span class="pill-mini">Week 1</span>
           <h3>Welcome, story mapping & confidence check-in.</h3>
           <p>
-            Icebreakers, personality tests, writing exercises on trauma responses and life goals.
-            Pre-programme evaluation and group agreements.
+            Icebreakers, personality tools, writing exercises on trauma responses and life goals,
+            group agreements and pre-programme evaluation.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Week 2</span>
           <h3>Money, independence & imposter syndrome.</h3>
           <p>
-            Mentoring around financial literacy, practical skills, mindset work
-            around worthiness and taking up space in education, work and money.
+            Financial literacy, practical budgeting skills, and mindset work around
+            worthiness in education, work and money.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Week 3</span>
           <h3>Education, work & opportunity.</h3>
           <p>
-            Support with CVs, training, college/university referrals,
-            and pathways into courses or qualifications that fit the young woman’s goals.
+            CV support, training pathways, course referrals and discussions about
+            future goals and next steps.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Week 4</span>
           <h3>Skills & creativity.</h3>
           <p>
-            Space for practical courses (e.g. lash or beauty taster sessions, book club start)
-            that build confidence and open doors to income or hobbies.
+            Practical tasters (lash/beauty workshops, book club start),
+            early confidence building and hobby exploration.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Weeks 5–6</span>
           <h3>“Lay It Bare” & body confidence.</h3>
           <p>
-            Therapeutic circles where women can share if they feel ready, letter-writing to people
-            who have hurt them, healthy relationship brainstorming and movement-based confidence work.
+            Therapeutic circles, letters to people who have caused harm,
+            healthy relationship mapping and movement-based confidence sessions.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Weeks 7–8</span>
           <h3>Safety & voice.</h3>
           <p>
-            Self-defence classes, safety awareness (including safety apps and practical tools),
-            plus spoken word workshops where women craft and rehearse their pieces.
+            Self-defence training, safety apps/tools, and spoken-word development.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Weeks 9–11</span>
           <h3>Integration & reflection.</h3>
           <p>
-            Follow-up confidence sessions, performing poems within the group, affirmations,
-            group feedback, and structured reflection exercises tracking growth since Week 1.
+            Confidence follow-ups, performing spoken pieces in circle, group feedback,
+            structured reflection and affirmations.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Week 12</span>
           <h3>Soft-life celebration.</h3>
           <p>
-            End-of-cohort treat (such as a group meal or experience), final reflections,
-            feedback forms and conversations about next steps, signposting and ongoing support.
+            Group treat (meal or experience), final reflections, feedback forms,
+            signposting and onward support planning.
           </p>
         </div>
+
       </div>
     </section>
 
