--- a/about.html
+++ b/about.html
@@ -4,24 +4,30 @@
   <meta charset="UTF-8" />
   <title>About – G.L.O.E.W</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
-<meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
-<meta name="author" content="G.L.O.E.W">
 
-<meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
-<meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
-<meta property="og:url" content="https://wearegloew.github.io">
-<meta property="og:type" content="website">
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- SEO -->
+  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
+  <meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
+  <meta name="author" content="G.L.O.E.W">
+
+  <!-- Social Share -->
+  <meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
+  <meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
+  <meta property="og:url" content="https://wearegloew.github.io">
+  <meta property="og:type" content="website">
 </head>
+
 <body>
-  <section class="animate">
-   ...content...
-</section>
   <div class="page">
+
+    <!-- HEADER -->
     <header>
       <div class="brand">
         <div class="brand-logo">
@@ -32,16 +38,18 @@
           <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
         </div>
       </div>
+
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="about.html" class="active">About</a>
         <a href="programme.html">Programme</a>
         <a href="join.html">Join</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
 
-    <section class="page-intro">
+    <!-- INTRO -->
+    <section class="page-intro animate">
       <h1>About G.L.O.E.W</h1>
       <p>
         G.L.O.E.W is a trauma-informed sisterhood space for young women
@@ -49,9 +57,11 @@
       </p>
     </section>
 
-    <section class="section-narrow">
+    <!-- WHY WE EXIST -->
+    <section class="section-narrow animate">
       <div class="section-pill">Our heart</div>
       <h2 class="section-title">Why G.L.O.E.W exists</h2>
+
       <p class="section-lead">
         G.L.O.E.W was created from lived experience — as a response to the gaps so many young women
         fall through when it comes to healing, safety, confidence, and real-life opportunities.
@@ -63,23 +73,25 @@
           <h3>Has survived more than she’s ever said out loud.</h3>
           <p>
             We hold space for young women who may have experienced domestic abuse, sexual violence,
-            emotional harm, unstable relationships, or childhood trauma — and who are now ready to
+            emotional harm, unstable relationships, or childhood trauma — and who are ready to
             move from surviving to slowly, gently thriving.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">We believe…</span>
           <h3>You shouldn’t have to heal alone.</h3>
           <p>
-            Healing is hard, and it’s even harder in isolation. G.L.O.E.W is built as a sisterhood:
-            a community where women can breathe, unpack, laugh, cry, and rebuild together,
-            supported by trauma-informed practice, lived experience and practical tools.
+            Healing is hard, especially in isolation. G.L.O.E.W is built as a sisterhood:
+            a community where women can breathe, unpack, laugh, cry, and rebuild together —
+            supported by trauma-informed practice, lived experience, and practical tools.
           </p>
         </div>
       </div>
     </section>
 
-    <section class="section-narrow">
+    <!-- VALUES -->
+    <section class="section-narrow animate">
       <div class="section-pill">Values</div>
       <h2 class="section-title">Our core values</h2>
 
@@ -89,66 +101,75 @@
           <h3>Emotional + physical safety first.</h3>
           <p>
             We prioritise consent, confidentiality, boundaries and emotional check-ins.
-            No one is pushed to share more than they want to. Every woman’s story is held with respect.
+            No one is pushed to share more than they want to.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Dignity</span>
           <h3>You are more than what happened to you.</h3>
           <p>
-            We see every woman as whole — not broken. The focus is on strengths, resilience, gifts
-            and the future, not just on the pain.
+            We see every woman as whole — not broken. We focus on strengths, resilience,
+            gifts and the future, not just on the pain.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Sisterhood</span>
           <h3>No one left behind.</h3>
           <p>
-            G.L.O.E.W is a space for building real, honest connections. Women are encouraged to celebrate
-            each other, challenge harmful patterns and hold each other accountable with love.
+            G.L.O.E.W builds real, honest connections. Women celebrate each other,
+            challenge harmful patterns, and hold each other accountable with love.
           </p>
         </div>
+
         <div class="card-soft">
           <span class="pill-mini">Growth</span>
           <h3>Small steps count.</h3>
           <p>
-            We celebrate small wins: a boundary set, a red flag noticed, a CV updated, a poem performed.
-            Progress is measured in both practical changes and emotional shifts.
+            We celebrate every win: a boundary, a red flag noticed, a CV updated,
+            a poem performed. Growth is emotional and practical.
           </p>
         </div>
       </div>
     </section>
-<section id="professionals" class="pro-section">
-  <h2>For Professionals & Funders</h2>
-  <p>
-    G.L.O.E.W is a trauma-informed sisterhood programme designed to support young women aged 18–25 who have experienced, or are at risk of, domestic abuse, sexual trauma, emotional neglect, or community-based trauma. Our work blends emotional safety, empowerment, structured healing practices, and community building.
-  </p>
 
-  <p>
-    We partner with statutory services, charities, local authorities, youth organisations and safeguarding professionals who are committed to early intervention, emotional wellbeing, and long-term empowerment for young women. 
-  </p>
+    <!-- PROFESSIONALS & FUNDERS -->
+    <section id="professionals" class="pro-section section-narrow animate">
+      <h2 class="section-title">For Professionals & Funders</h2>
 
-  <p>
-    Our programme is built using:
-  </p>
-  <ul>
-    <li>Trauma-informed practice</li>
-    <li>Safeguarding-first frameworks</li>
-    <li>Reflective therapeutic exercises and confidence-building workshops</li>
-    <li>Holistic learning across emotional, social, and wellbeing pillars</li>
-    <li>Evidence-based models of empowerment and healthy relationship education</li>
-  </ul>
+      <p>
+        G.L.O.E.W supports young women aged 18–25 who have experienced, or are at risk of,
+        domestic abuse, sexual trauma, emotional neglect, or community-based trauma.
+      </p>
 
-  <p>
-    If you are a commissioner, safeguarding lead, funder, or practitioner interested in referrals, collaboration, or partnership opportunities, please get in touch. We welcome conversations that help expand the safety, healing, and opportunities available to young women.
-  </p>
+      <p>
+        We partner with statutory services, youth organisations, local authorities, VAWG services,
+        commissioners and charities committed to early intervention, safeguarding and empowerment.
+      </p>
 
-  <a href="contact.html" class="btn-pro">Contact Us</a>
-</section>
-    
+      <p>Our programme is built using:</p>
+      <ul class="bullet">
+        <li>Trauma-informed practice</li>
+        <li>Safeguarding-first frameworks</li>
+        <li>Reflective therapeutic tools</li>
+        <li>Confidence-building workshops</li>
+        <li>Holistic emotional + practical learning</li>
+        <li>Evidence-based empowerment models</li>
+      </ul>
+
+      <p>
+        For partnership conversations, commissioning queries or programme information packs,
+        reach out via our contact page.
+      </p>
+
+      <a href="contact.html" class="btn-pro">Contact Us</a>
+    </section>
+
     <footer>
       © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
     </footer>
+
   </div>
 
   <script src="main.js"></script>
