--- a/contact.html
+++ b/contact.html
@@ -5,103 +5,91 @@
   <title>Contact – G.L.O.E.W</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
-
-  <!-- SEO -->
-  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, growth, confidence-building and community. Based in London.">
-  <meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment programme, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
-  <meta name="author" content="G.L.O.E.W">
-
-  <!-- Social Share -->
-  <meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
-  <meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
-  <meta property="og:url" content="https://wearegloew.github.io">
-  <meta property="og:type" content="website">
 </head>
-
 <body>
-  <div class="page">
 
-    <!-- HEADER -->
-    <header>
-      <div class="brand">
-        <div class="brand-logo">
-          <img src="assets/gloew-logo.png" alt="G.L.O.E.W logo">
-        </div>
-        <div>
-          <div class="brand-text-top">G.L.O.E.W</div>
-          <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
-        </div>
+<div class="page animate">
+
+  <!-- HEADER -->
+  <header>
+    <div class="brand">
+      <div class="brand-logo">
+        <img src="For%20more%20info%20email%20weare.GLOEW%20@gmail.com%20-%204.png" alt="G.L.O.E.W logo">
       </div>
+      <div>
+        <div class="brand-text-top">G.L.O.E.W</div>
+        <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
+      </div>
+    </div>
 
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="programme.html">Programme</a>
-        <a href="join.html">Join</a>
-        <a href="contact.html" class="active">Contact</a>
-      </nav>
-    </header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programme.html">Programme</a>
+      <a href="join.html">Join</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </header>
 
-    <!-- INTRO -->
-    <section class="page-intro animate">
-      <h1>Contact & collaborations</h1>
+  <!-- INTRO -->
+  <section class="page-intro">
+    <h1>Contact & collaborations</h1>
+    <p>
+      For referrals, partnerships, venues or funding conversations, we’d love to hear from you.
+    </p>
+  </section>
+
+  <!-- CONTACT DETAILS -->
+  <section class="section-narrow">
+    <div class="section-pill">Get in touch</div>
+    <h2 class="section-title">Contact details</h2>
+
+    <div class="card-soft">
       <p>
-        For referrals, partnerships, venues or funding conversations, we’d love to hear from you.
+        <strong>Email:</strong> info@gloew.co.uk (placeholder)<br>
+        <strong>Instagram:</strong> @G.L.O.E.W<br>
+        <strong>TikTok:</strong> @G.L.O.E.W
       </p>
-    </section>
 
-    <!-- CONTACT DETAILS -->
-    <section class="section-narrow animate">
-      <div class="section-pill">Get in touch</div>
-      <h2 class="section-title">Contact details</h2>
+      <p style="margin-top: 10px;">
+        For safeguarding concerns or urgent support, please contact emergency or crisis services.
+        G.L.O.E.W is not a crisis service, but we offer signposting during sessions.
+      </p>
+    </div>
+  </section>
 
-      <div class="card-soft">
-        <p>
-          <strong>Email:</strong> info@gloew.co.uk (placeholder)<br>
-          <strong>Instagram:</strong> @G.L.O.E.W<br>
-          <strong>TikTok:</strong> @G.L.O.E.W
-        </p>
+  <!-- PARTNERSHIPS -->
+  <section class="section-narrow">
+    <div class="section-pill">Partnerships</div>
+    <h2 class="section-title">Venues & facilitators</h2>
 
-        <p style="margin-top: 10px;">
-          For safeguarding concerns or urgent support, please contact appropriate emergency or crisis services.
-          G.L.O.E.W is not a crisis service, but we can help with signposting during sessions.
-        </p>
-      </div>
-    </section>
+    <div class="card-soft">
+      <p>We are open to connecting with:</p>
 
-    <!-- PARTNERSHIPS -->
-    <section class="section-narrow animate">
-      <div class="section-pill">Partnerships</div>
-      <h2 class="section-title">Venues & facilitators</h2>
+      <ul class="bullet">
+        <li>Community spaces and venues able to host G.L.O.E.W cohorts.</li>
+        <li>Workshop facilitators aligned with our pillars.</li>
+        <li>Funders, commissioners and organisations supporting trauma-informed youth work.</li>
+      </ul>
 
-      <div class="card-soft">
-        <p>We are always open to connecting with:</p>
+      <p style="margin-top: 8px;">
+        Please reach out via email with a brief outline of who you are and how you'd like to collaborate.
+      </p>
+    </div>
+  </section>
 
-        <ul class="bullet">
-          <li>Community spaces and venues who can host G.L.O.E.W cohorts.</li>
-          <li>Facilitators delivering workshops aligned with our pillars (growth, love, opportunity, education, wellness).</li>
-          <li>Funders, commissioners and organisations interested in trauma-informed, youth-led work.</li>
-        </ul>
+  <!-- FOOTER -->
+  <footer>
+    © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
+  </footer>
 
-        <p style="margin-top: 8px;">
-          Please reach out via email with a brief outline of who you are and how you’d like to collaborate.
-        </p>
-      </div>
-    </section>
+</div>
 
-    <!-- FOOTER -->
-    <footer>
-      © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
-    </footer>
-
-  </div>
-
-  <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
