--- a/programme.html
+++ b/programme.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Programme – G.L.O.E.W</title>
+  <title>G.L.O.E.W – Growth • Love • Opportunity • Education • Wellness</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
 
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,8 +20,8 @@
   <!-- HEADER -->
   <header>
     <div class="brand">
-<div class="brand-logo">
-                <img src="assets/logo.png" class="brand-logo" alt="G.L.O.E.W logo">
+      <div class="brand-logo">
+        <img src="assets/logo.png" alt="G.L.O.E.W logo">
       </div>
       <div>
         <div class="brand-text-top">G.L.O.E.W</div>
@@ -28,133 +30,51 @@
     </div>
 
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <a href="programme.html" class="active">Programme</a>
+      <a href="programme.html">Programme</a>
       <a href="join.html">Join</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <!-- INTRO -->
+  <!-- HERO SECTION -->
   <section class="page-intro">
-    <h1>The G.L.O.E.W 12-week journey</h1>
+    <h1>
+      This isn’t just a programme.<br>
+      It’s a sisterhood.<br>
+      It’s a movement. It’s your moment to G.L.O.E.W.
+    </h1>
     <p>
-      A carefully designed programme blending healing, confidence, relationships, safety,
-      money skills and soft-life moments — so growth isn’t just talked about, it’s lived.
+      A trauma-informed, 12-week programme designed to help young women heal, build confidence, 
+      and step into the soft, empowered lives they deserve.
     </p>
-  </section>
 
-  <!-- THREE PHASES -->
-  <section class="section-narrow">
-    <div class="section-pill">Overview</div>
-    <h2 class="section-title">Three phases of the cohort</h2>
-
-    <div class="section-grid">
-      <div class="card-soft">
-        <span class="pill-mini">Phase 1</span>
-        <h3>Weeks 1–4: Safety, stories & self-awareness.</h3>
-        <p>
-          Welcome day, icebreakers, personality tests, story sharing, temperature checks,
-          and reflective writing on life plans, trauma responses and identity.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Phase 2</span>
-        <h3>Weeks 5–8: Confidence, body & voice.</h3>
-        <p>
-          Spoken word training, “Lay It Bare” therapeutic circles, movement workshops
-          (such as pole art), self-defence and safety awareness.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Phase 3</span>
-        <h3>Weeks 9–12: Future, freedom & soft life.</h3>
-        <p>
-          Money mindset, financial literacy, education and training opportunities,
-          celebration sessions, reflection and an end-of-cohort treat.
-        </p>
-      </div>
+    <div class="btn-row">
+      <a href="join.html" class="btn-primary">Join the sisterhood</a>
+      <a href="programme.html" class="btn-outline">View programme</a>
     </div>
   </section>
 
-  <!-- WEEK BY WEEK -->
+  <!-- ABOUT SECTION -->
   <section class="section-narrow">
-    <div class="section-pill">Week by week</div>
-    <h2 class="section-title">Sample cohort outline</h2>
+    <div class="section-pill">About G.L.O.E.W</div>
+    <h2 class="section-title">What is G.L.O.E.W?</h2>
 
     <div class="section-grid">
       <div class="card-soft">
-        <span class="pill-mini">Week 1</span>
-        <h3>Welcome, story mapping & confidence check-in.</h3>
+        <h3>Trauma-informed, but not trauma-defined.</h3>
         <p>
-          Icebreakers, personality tests, writing exercises on trauma responses, life goals,
-          group agreements and pre-programme evaluation.
+          G.L.O.E.W supports young women who have experienced harm and are ready to heal, grow, 
+          and rebuild safe, confident, soft lives.
         </p>
       </div>
 
       <div class="card-soft">
-        <span class="pill-mini">Week 2</span>
-        <h3>Money, independence & imposter syndrome.</h3>
+        <h3>Healing + skills + sisterhood.</h3>
         <p>
-          Mentoring around financial literacy, practical independence skills and mindset work
-          around worthiness in work, education and money.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Week 3</span>
-        <h3>Education, work & opportunity.</h3>
-        <p>
-          Support with CVs, training, referrals to courses, and upskilling pathways aligned
-          with each young woman’s goals.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Week 4</span>
-        <h3>Skills & creativity.</h3>
-        <p>
-          Practical tasters (beauty/lash basics, book club start) to build confidence and
-          open new hobbies or income avenues.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Weeks 5–6</span>
-        <h3>“Lay It Bare” & body confidence.</h3>
-        <p>
-          Therapeutic circles, letter-writing for closure, healthy relationship discussions,
-          and movement-based confidence work.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Weeks 7–8</span>
-        <h3>Safety & voice.</h3>
-        <p>
-          Self-defence sessions, practical safety education, spoken word workshops and
-          confidence-building through expression.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Weeks 9–11</span>
-        <h3>Integration & reflection.</h3>
-        <p>
-          Confidence boosters, poem performance, affirmations, feedback and structured
-          reflection exercises charting growth.
-        </p>
-      </div>
-
-      <div class="card-soft">
-        <span class="pill-mini">Week 12</span>
-        <h3>Soft-life celebration.</h3>
-        <p>
-          A group treat or experience, final reflections, feedback forms,
-          signposting and personalised next-steps planning.
+          We blend emotional healing, practical life skills, financial empowerment,
+          creative workshops and community bonding.
         </p>
       </div>
     </div>
@@ -167,6 +87,7 @@
 
 </div>
 
+<!-- JS -->
 <script src="main.js"></script>
 </body>
 </html>
