--- a/index.html
+++ b/index.html
@@ -2,121 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>G.L.O.E.W – Growth, Love, Opportunity, Education, Wellness</title>
+  <title>About – G.L.O.E.W</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
-
-  <!-- SEO -->
-  <meta name="description" content="G.L.O.E.W – A trauma-informed sisterhood programme empowering young women aged 18–25 through healing, confidence-building and community. Based in London.">
-  <meta name="keywords" content="GLOEW, G.L.O.E.W, women's empowerment, trauma informed programme London, domestic abuse support, healing for young women, empowerment workshops, sisterhood programme">
-  <meta name="author" content="G.L.O.E.W">
-
-  <meta property="og:title" content="G.L.O.E.W – Empowering Young Women">
-  <meta property="og:description" content="A trauma-informed empowerment programme for young women aged 18–25. Healing, growth, opportunity and sisterhood.">
-  <meta property="og:url" content="https://wearegloew.github.io">
-  <meta property="og:type" content="website">
 </head>
-
 <body>
 
-  <!-- PAGE WRAPPER -->
-  <div class="page">
+<div class="page animate">
 
-    <!-- HEADER -->
-    <header class="fade-in">
-      <div class="brand">
+  <!-- HEADER -->
+  <header>
+    <div class="brand">
+      <div class="brand-logo">
         <img src="assets/logo.png" class="brand-logo" alt="G.L.O.E.W logo">
-        <div>
-          <div class="brand-text-top">G.L.O.E.W</div>
-          <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
-        </div>
       </div>
+      <div>
+        <div class="brand-text-top">G.L.O.E.W</div>
+        <div class="brand-text-main">Growth • Love • Opportunity • Education • Wellness</div>
+      </div>
+    </div>
 
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="programme.html">Programme</a>
-        <a href="join.html">Join</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="programme.html">Programme</a>
+      <a href="join.html">Join</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-    <!-- HERO SECTION -->
-    <section class="hero fade-in-stagger">
-      <div class="hero-text-block">
-        <h1 class="hero-title">
-          This isn’t just a programme.  
-          <br>It’s a sisterhood.  
-          <br>It’s a movement. It’s your moment to G.L.O.E.W.
-        </h1>
+  <!-- INTRO -->
+  <section class="page-intro">
+    <h1>About G.L.O.E.W</h1>
+    <p>
+      G.L.O.E.W is a trauma-informed sisterhood space designed for young women ready
+      to heal, grow and step into the soft, stable lives they deserve.
+    </p>
+  </section>
 
-        <p class="hero-body">
-          A trauma-informed, 12-week programme designed to help young women
-          heal, build confidence, and step into the soft, empowered lives they deserve.
+  <!-- WHY WE EXIST -->
+  <section class="section-narrow">
+    <div class="section-pill">Our heart</div>
+    <h2 class="section-title">Why G.L.O.E.W exists</h2>
+    <p class="section-lead">
+      Born from lived experience — G.L.O.E.W responds to the gaps young women fall through
+      when seeking healing, confidence, safety and opportunity.
+    </p>
+
+    <div class="section-grid" style="margin-top: 18px;">
+      <div class="card-soft">
+        <span class="pill-mini">For the girl who…</span>
+        <h3>Has survived more than she’s ever said out loud.</h3>
+        <p>
+          We support young women who may have experienced domestic abuse, sexual violence,
+          emotional harm or childhood trauma — gently walking with them from surviving to thriving.
         </p>
-
-        <div class="hero-buttons">
-          <a href="join.html" class="btn-primary">Join the sisterhood</a>
-          <a href="programme.html" class="btn-secondary">View programme</a>
-        </div>
       </div>
-    </section>
-
-    <!-- ABOUT PREVIEW -->
-    <section class="section fade-in">
-      <div class="section-pill">About G.L.O.E.W</div>
-      <h2 class="section-title">What is G.L.O.E.W?</h2>
-
-      <div class="section-grid">
-        <div class="card-soft">
-          <h3>Trauma-informed, but not trauma-defined.</h3>
-          <p>
-            A space where young women can breathe, heal, connect and grow —
-            supported by sisterhood, structure and care.
-          </p>
-        </div>
-
-        <div class="card-soft">
-          <h3>Healing + skills + sisterhood.</h3>
-          <p>
-            We blend therapeutic circles, confidence-building, creative expression,
-            practical life skills, and joyful experiences.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- JOIN PREVIEW -->
-    <section class="section fade-in">
-      <div class="section-pill">Join us</div>
-      <h2 class="section-title">Who G.L.O.E.W is for</h2>
 
       <div class="card-soft">
+        <span class="pill-mini">We believe…</span>
+        <h3>You shouldn’t have to heal alone.</h3>
         <p>
-          For young women aged 18–25 ready to explore healing, identity,
-          relationships, safety, independence and soft life.
+          G.L.O.E.W is a sisterhood: a place to breathe, unpack, laugh, cry and rebuild.
+          Created using trauma-informed practice and lived experience.
         </p>
-
-        <div class="button-row">
-          <a href="join.html" class="btn-primary">Enrol now</a>
-          <a href="contact.html" class="btn-secondary">Refer someone</a>
-        </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- FOOTER -->
-    <footer>
-      © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
-    </footer>
+  <!-- VALUES -->
+  <section class="section-narrow">
+    <div class="section-pill">Values</div>
+    <h2 class="section-title">Our core values</h2>
 
-  </div>
+    <div class="section-grid">
+      <div class="card-soft">
+        <span class="pill-mini">Safety</span>
+        <h3>Emotional & physical safety first.</h3>
+        <p>
+          We prioritise consent, boundaries, confidentiality and emotional check-ins.
+        </p>
+      </div>
 
-  <script src="main.js"></script>
+      <div class="card-soft">
+        <span class="pill-mini">Dignity</span>
+        <h3>You are more than what happened to you.</h3>
+        <p>
+          We focus on resilience, strengths, gifts and the future — not the pain alone.
+        </p>
+      </div>
+
+      <div class="card-soft">
+        <span class="pill-mini">Sisterhood</span>
+        <h3>No one left behind.</h3>
+        <p>
+          Women celebrate one another, challenge harmful patterns and support with love.
+        </p>
+      </div>
+
+      <div class="card-soft">
+        <span class="pill-mini">Growth</span>
+        <h3>Small steps matter.</h3>
+        <p>
+          Every boundary, every realisation, every moment of confidence is recognised.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROFESSIONALS SECTION -->
+  <section class="section-narrow">
+    <div class="section-pill">For professionals</div>
+    <h2 class="section-title">Professionals & Funders</h2>
+
+    <div class="card-soft">
+      <p>
+        We collaborate with social workers, housing teams, youth workers, safeguarding leads,
+        commissioners and organisations supporting young women.
+      </p>
+
+      <ul class="bullet">
+        <li>Trauma-informed practice</li>
+        <li>Safeguarding-first approach</li>
+        <li>Reflective therapeutic exercises</li>
+        <li>Holistic emotional & practical learning</li>
+        <li>Healthy relationship education</li>
+      </ul>
+
+      <p style="margin-top: 8px;">
+        For referrals or partnership enquiries, please contact us through the Contact page.
+      </p>
+
+      <a href="contact.html" class="btn-primary">Contact us</a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    © <span id="year"></span> G.L.O.E.W. Built with love, safety and sisterhood.
+  </footer>
+</div>
+
+<script src="main.js"></script>
 </body>
 </html>
