--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   <!-- HERO SECTION -->
   <section class="page-intro">
     <h1>
-      This isn’t just a programme.<br>
-      It’s a sisterhood.<br>
+      This isn’t just a programme. It’s a sisterhood.<br>
       It’s a movement. It’s your moment to G.L.O.E.W.
     </h1>
     <p>
