--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
       and step into the soft, empowered lives they deserve.
     </p>
 
-    <div class="btn-row">
-      <a href="join.html" class="btn-primary">Join the sisterhood</a>
-      <a href="programme.html" class="btn-outline">View programme</a>
-    </div>
+    <div class="hero-buttons">
+  <a href="join.html" class="btn-primary">Join the sisterhood</a>
+  <a href="programme.html" class="btn-secondary btn-secondary-solid">
+    View programme
+  </a>
+</div>
   </section>
 
   <!-- ABOUT SECTION -->
