--- a/join.html
+++ b/join.html
@@ -115,8 +115,30 @@
       </ul>
 
       <p style="margin-top: 8px;">
-        For referral enquiries, please reach out via the Contact page.
-      </p>
+        For referral enquiries, please reach out via the Contact page or use our Professional Referral Form.
+        <a href="PASTE-YOUR-GOOGLE-FORM-LINK-HERE" 
+   class="btn-primary" 
+   target="_blank" 
+   rel="noopener">
+  Submit a Professional Referral
+</a>
+    <div class="privacy-note">
+  <p><strong>Privacy Notice:</strong>  
+  G.L.O.E.W handles all personal information with care and confidentiality.  
+  Any details shared through our enrolment or referral forms are used solely
+  for the purpose of assessing suitability for the programme, supporting
+  communication, and ensuring participant safety and wellbeing.</p>
+
+  <p>Information is stored securely and only accessed by authorised G.L.O.E.W staff.
+  We do not share your data with any outside organisations unless required for
+  safeguarding, risk management, or where explicit consent has been given.</p>
+
+  <p>A full Privacy & Data Protection Policy will be published once G.L.O.E.W is
+  formally registered as a CIC and ICO-certified. If you have any questions
+  about how your information is used, please contact us at 
+  <a href="mailto:weare.gloew@gmail.com">weare.gloew@gmail.com</a>.</p>
+</div>
+        </p>
     </div>
   </section>
 
