--- a/join.html
+++ b/join.html
@@ -106,7 +106,9 @@
         safeguarding and how we keep the space safe.
       </p>
 
-      <a href="https://forms.gle/Ht47K3yYVQWaJRj9A" class="btn-secondary">Complete consent form</a>
+<a href="https://forms.gle/Ht47K3yYVQWaJRj9A" class="btn-secondary">
+  Complete consent form
+</a>
     </div>
   </section>
 
