--- a/join.html
+++ b/join.html
@@ -72,7 +72,7 @@
     <h2 class="section-title">Eligibility</h2>
 
     <p class="section-lead">
-      G.L.O.E.W is designed for young women aged 18–25 who:
+      G.L.O.E.W is designed for young womenaged 18–25 who:
     </p>
 
     <ul class="bullet">
@@ -131,8 +131,7 @@
 
       <p style="margin-top: 8px;">
         For referral enquiries, please reach out via the Contact page or use our Professional Referral Form.
-        <a href="PASTE-YOUR-GOOGLE-FORM-LINK-HERE" 
-   class="btn-primary" 
+        <a href="https://forms.gle/uZnFdFSY3YuronyM8" class="btn-primary">Complete consent form</a> 
    target="_blank" 
    rel="noopener">
   
