--- a/join.html
+++ b/join.html
@@ -128,12 +128,8 @@
 
       <p style="margin-top: 8px;">
         For referral enquiries, please reach out via the Contact page or use our Professional Referral Form.
-        <a href="https://forms.gle/uZnFdFSY3YuronyM8" class="btn-primary">Complete consent form</a> 
-   target="_blank" 
-   rel="noopener">
+        <a href="https://forms.gle/uZnFdFSY3YuronyM8" class="btn-primary">Submit a Professional Referral</a> 
   
-  Submit a Professional Referral
-</a>
     <div class="privacy-note">
   <p><strong>Privacy Notice:</strong>  
   G.L.O.E.W handles all personal information with care and confidentiality.  
