--- a/programme.html
+++ b/programme.html
@@ -58,7 +58,7 @@
     <h1>The G.L.O.E.W 12-week journey</h1>
     <p>
       A carefully designed programme blending healing, confidence, relationships, safety,
-      money skills and soft-life moments — so growth isn’t just talked about, it’s lived.
+      money skills and soft-life moments, so growth isn’t just talked about, it’s lived.
     </p>
   </section>
 
